--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   </head> 
 
   <body>
+    <div id='allcontent'>
     <div id="header">
         
       <img src="images/header.gif" alt="Starbuzz Coffee header image">
@@ -90,5 +91,6 @@
     </div>
 
   </body>
+</div>
 </html>
 
