--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head> 
 
   <body>
-    <div id='allcontent'>
+    <div class='allcontent'>
     <div id="header">
         
       <img src="images/header.gif" alt="Starbuzz Coffee header image">
