--- a/index.html
+++ b/index.html
@@ -1,41 +1,53 @@
 <!DOCTYPE html>
 <html>
   <head>
+      
     <meta charset="utf-8">
     <title>Starbuzz Coffee</title>
-    <link  rel="stylesheet"  type="text/css" href="starbuzz.css">
+    <link type="text/css" rel="stylesheet" href="starbuzz.css">
   </head> 
 
   <body>
-      <div id="header">
+      <header>
         <div class="headerImageLeft"></div>
         <div class="headerImageRight"></div>
+      </header>
+      <div id="award">
+        <img src="images/award.gif"
+        alt="Roaster of the Year award">
       </div>
       <div id="tableContainer">
       <div id="tableRow">
+
+        <div id="coupon">
+          <a href="freecoffee.html" title="Click here to get your free coffee">
+            <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
+          </a>
+        </div>
           <div id="drinks">
-            <h1>BEVERAGES</h1>
-            <p>House Blend, $1.49</p>
-            <p>Mocha Cafe Latte, $2.35</p>
-            <p>Cappuccino, $1.89</p>
-            <p>Chai Tea, $1.85</p>
-            <h1>ELIXIRS</h1>
-            <p>
-            We proudly serve elixirs brewed by our friends
-            at the Head First Lounge.
-            </p>
-            <p>Green Tea Cooler, $2.99</p>
-            <p>Raspberry Ice Concentration, $2.99</p>
-            <p>Blueberry Bliss Elixir, $2.99</p>
-            <p>Cranberry Antioxidant Blast, $2.99</p>
-            <p>Chai Chiller, $2.99</p>
-            <p>Black Brain Brew, $2.99</p>
-    </div>
-            <div id="main">
-            <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
-            <p>
-            At Starbuzz Coffee, we are dedicated to filling all your  caffeine needs through our 
-                quality coffees and teas. Sure, we want you to have a great cup of coffee and a great 
+                    <h1>BEVERAGES</h1>
+                      <p>House Blend, $1.49</p>
+                      <p>Mocha Cafe Latte, $2.35</p>
+                      <p>Cappuccino, $1.89</p>
+                      <p>Chai Tea, $1.85</p>
+                    <h1>ELIXIRS</h1>
+                      <p>
+                        We proudly serve elixirs brewed by our friends
+                        at the Head First Lounge.
+                      </p>
+                      <p>Green Tea Cooler, $2.99</p>
+                      <p>Raspberry Ice Concentration, $2.99</p>
+                      <p>Blueberry Bliss Elixir, $2.99</p>
+                      <p>Cranberry Antioxidant Blast, $2.99</p>
+                      <p>Chai Chiller, $2.99</p>
+                      <p>Black Brain Brew, $2.99</p>
+          </div>
+
+                  <main>
+                    <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
+                    <p>
+                      At Starbuzz Coffee, we are dedicated to filling all your  caffeine needs through our 
+                      quality coffees and teas. Sure, we want you to have a great cup of coffee and a great 
                       coffee experience as well, but we're the only company that actively monitors and 
                       optimizes caffeine levels. So stop by and fill your cup, or order online with our new Bean 
                       Machine online order form, and get that quality Starbuzz coffee that you know will meet 
@@ -76,8 +88,8 @@
                       <a href="form.html">Bean Machine</a>, and take
                       the Starbuzz Coffee experience home.
                     </p>
-                  </div>
-            <div id="sidebar">
+                  </main>
+        <aside>
             <p class="beanheading">
               <img src="images/bag.gif" alt="Bean Machine bag">
               <br>
@@ -97,16 +109,20 @@
               enter your order, and behind the scenes, your coffee is roasted, ground 
               (if you want), packaged, and shipped to your door.
             </p>
-          </div>
-      </div>
+        </aside>
+    
     </div>
-  </div>
-    <div id="footer">
+    </div>
+    </div>
+    <footer>
          &copy; 2012, Starbuzz Coffee
          <br>
          All trademarks and registered trademarks appearing on
          this site are the property of their respective owners.
-    </div>
+
+
+    </footer>
   </body>
 </html>
+
 
