--- a/index.html
+++ b/index.html
@@ -11,8 +11,17 @@
       <div class="headerImageleft"></div>
       <div class="headerImageright"></div>
     </div>
+    <div id="award">
+      <img src="images/award.gif"
+      alt="Roaster of the Year award">
+    </div>   
     <div id="tableContainer">
     <div id="tableRow">
+    <div id="coupon">
+            <a href="freecoffee.html" title="Click here to get your free coffee">
+            <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
+            </a>
+    </div>
         <div id="drinks">
             <h1>BEVERAGES</h1>
               <p>House Blend, $1.49</p>
