增加导航栏

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
       
     <meta charset="utf-8">
-    <title>Starbuzz Coffee</title>
+    <title>Starbuzz Coffee  </title>
     <link type="text/css" rel="stylesheet" href="starbuzz.css">
   </head> 
 
@@ -12,6 +12,15 @@
         <div class="headerImageLeft"></div>
         <div class="headerImageRight"></div>
       </header>
+      <nav>
+      <ul>
+            <li><a href="index.html">HOME</a></li>
+            <li class="selected"><a href="blog.html">BLOG</a></li>
+            <li><a href="">INVENTIONS</a></li>
+            <li><a href="">RECIPES</a></li>
+            <li><a href="">LOCATIONS</a></li>
+      </ul>
+    </nav>
       <div id="award">
         <img src="images/award.gif"
         alt="Roaster of the Year award">
