--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
       <div class="headerImageleft"></div>
       <div class="headerImageright"></div>
     </div>
+    <nav>
+      <ul>
+        <li><a href="index.html">HOME</a></li>
+        <li class="selected"><a href="blog.html">BLOG</a></li>
+        <li><a href="">INVENTIONS</a></li>
+        <li><a href="">RECIPES</a></li>
+        <li><a href="">LOCATIONS</a></li>
+      </ul>
+    </nav>
     <div id="award">
       <img src="images/award.gif"
       alt="Roaster of the Year award">
